@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.7-3.1
-Date: 2017-12-06
+Version: 0.7-3.2
+Date: 2018-06-18
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at",
                     comment = c(ORCID = "0000-0001-7656-8338")),
